--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,25 @@
   --font-optical-sizing: auto;
   --animate-fade-in: fadeIn 1s ease-in;
   --animate-fade-out: fadeOut 1s ease-out;
+  --animate-slide-down: slideDown 1s;
+  --animate-slide-up: slideUp 1s;
 
+  @keyframes slideDown {
+    0% {
+      transform: translateY(-100%);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+  @keyframes slideUp {
+    0% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(-100%);
+    }
+  }
   @keyframes fadeIn {
     0% {
       opacity: 0;
@@ -45,10 +63,6 @@
   label:has(+ textarea[required]) .label-text::after {
     content: ' *';
     @apply text-error;
-  }
-
-  .recorder {
-    @apply flex flex-row items-end justify-end  p-2 h-8 fixed top-4 right-0 w-full z-50;
   }
 }
 
