--- a/src/styles.css
+++ b/src/styles.css
@@ -10,13 +10,40 @@
   --font-weight-bolder: 700;
   --font-weight-boldest: 800;
   --font-optical-sizing: auto;
-  --animate-fade-in: fadeIn 1s ease-in;
-  --animate-fade-out: fadeOut 1s ease-out;
+
+  --animate-slide-in: slideIn 0.5s ease-out;
+  --animate-slide-out: slideOut 0.5s ease-in;
+  --animate-fade-in: fadeIn 0.5s ease-out;
+  --animate-fade-out: fadeOut 0.5s ease-in;
+
+  @keyframes slideIn {
+    0% {
+      transform: translateY(-100%);
+      opacity: 0;
+    }
+
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  @keyframes slideOut {
+    0% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+
+    100% {
+      transform: translateY(-100%);
+      opacity: 0;
+    }
+  }
 
   @keyframes fadeIn {
     0% {
       opacity: 0;
     }
+
     100% {
       opacity: 1;
     }
@@ -48,7 +75,7 @@
   }
 
   .recorder {
-    @apply flex flex-row items-end justify-end  p-2 h-8 fixed top-4 right-0 w-full z-50;
+    @apply flex flex-row items-end justify-end  p-2 h-8 fixed top-4 right-0 w-fit z-50;
   }
 }
 
